#base
AC_INIT([lsvpd],[1.6.7],[masonmik@us.ibm.com,bpeters@us.ibm.com])
AC_CONFIG_HEADER(src/include/config.h)
AM_INIT_AUTOMAKE
AC_SUBST(DATE, [`date`])

LT_INIT

#programs
AC_PROG_LIBTOOL
AC_LANG([C++])
AC_PROG_CXX
AC_C_CONST
AC_C_INLINE
AC_HEADER_STDBOOL
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

#headers
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h stdlib.h string.h sys/ioctl.h sys/param.h syslog.h unistd.h ctype.h regex.h])

#libraries
AC_CHECK_LIB(rtas, rtas_get_vpd)
AC_CHECK_LIB(sqlite3, sqlite3_libversion_number)
AC_FUNC_CLOSEDIR_VOID
AC_PROG_GCC_TRADITIONAL
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_HEADER_MAJOR
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([memmove memset mkdir socket strdup strerror strtol uname])

#*.ids location conditional.
AM_CONDITIONAL(PCI_IDS_LOC, [test -e /usr/share/pci.ids])
AM_CONDITIONAL(USB_IDS_LOC, [test -e /usr/share/usb.ids])
AM_CONDITIONAL(PCI_IDS_LOC2, [test -e /usr/share/hwdata/pci.ids])
AM_CONDITIONAL(USB_IDS_LOC2, [test -e /usr/share/hwdata/usb.ids])

#finished
AC_CONFIG_FILES([Makefile lsvpd.spec debian/changelog])
AC_OUTPUT
